# ResuMatrix

./: .env_main  .gitignore  Dockerfile  Jenkinsfile  README.md  XGBoost_and_Cosine_Similarity  docker-compose.yml  pdf_to_embeddings_dag.py  requirements.txt  setup.md  setup.sh
backend/: .env_backend  Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: jobs.py  training.py
backend/app/core/: config.py
backend/app/services/: database.py  pinecone.py  resume_processing.py  storage.py  vertex_ai.py
data_pipeline/: .env_datapipeline  Dockerfile  docker-compose.yaml  requirements.txt
data_pipeline/dags/: deployment_pipeline.py  embeddings_pipeline.py  pdf_to_embeddings_dag.py  random_test.py  train_data_pipeline.py
data_pipeline/scripts/: create_supabase_table.py  fetch_training_data.py  load_to_supabase.py  mod_pub_sub.py
frontend/: .env_frontend  README.md  app.py  jd_to_text.py  pyproject.toml  resume_to_csv.py  streamlit_app.py  supabase_auth.py  test_api.py
resumatrix_streamlit/: app.py  authentication.py  resume_ranker.py
retraining_pipeline/: Dockerfile  JENKINS_SETUP.md  Jenkinsfile  README.md  docker-compose.yml  download_from_gcs.py  jenkins_pipeline.groovy  mlflow.Dockerfile  push_to_artifactory.py  requirements.txt  run_in_docker.sh  run_retraining.py  run_without_docker.sh
src/: run_cosine_similarity.py  run_knn.py  run_logistic_regression.py  run_random_forest.py  run_similarity_with_xgboost.py  run_xgboost.py  run_xgboost_with_ner.py  test_code.py
(+24 files in other folders)
